# pozor-dom

./: .gitignore  Cargo.toml  README.md
pozor-dom-client/: Cargo.toml
pozor-dom-client/src/: main.rs  tui.rs  websocket.rs
pozor-dom-cloud/: Cargo.toml
pozor-dom-cloud/src/: main.rs
pozor-dom-device/: Cargo.toml
pozor-dom-device/src/: main.rs
pozor-dom-hub/: Cargo.toml
pozor-dom-hub/src/: database.rs  main.rs  mqtt.rs  websocket.rs
pozor-dom-mosquitto/: docker-compose.yml
pozor-dom-mosquitto/mosquitto/config/: mosquitto.conf
pozor-dom-shared/: Cargo.toml
pozor-dom-shared/src/: lib.rs
pozor-dom-shared/src/dashboard/: lib.rs  mod.rs  yew_app.rs  yew_components.rs  yew_index.html  yew_main.rs
tests/: Cargo.toml  integration_tests.rs
tests/common/: mod.rs
