[package]
name = "pozor-dom-client"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3", features = ["sink", "std"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
pozor-dom-shared = { path = "../pozor-dom-shared" }
