[package]
name = "pozor-dom-client"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3", features = ["sink", "std"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
pozor-dom-shared = { path = "../pozor-dom-shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ratatui = "0.26"
crossterm = "0.27"
unicode-width = "0.1"
