[package]
name = "pozor-dom-hub"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
pozor-dom-shared = { path = "../pozor-dom-shared" }
rumqttc = "0.25.1"         # MQTT client
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
warp = "0.3"
