[package]
name = "pozor-dom-tests"
version = "0.1.0"
edition = "2024"

[lib]
name = "pozor_dom_tests"
path = "integration_tests.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rumqttc = "0.24"
tokio-tungstenite = "0.28"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
futures = "0.3"
pozor-dom-shared = { path = "../pozor-dom-shared" }
